# website_diff

./: pyproject.toml
src/: lib.rs
website_diff/: _htmldiff_py.py  htmldiff.py  page.py
website_diff/render/: __init__.py  plotly.py  prerender.py  svg.py
