[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "website_diff"
version = "0.2.0"
description = "A simple tool for producing navigable, highlighted diffs of rendered HTML websites"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Trevor Campbell", email = "trevor.d.campbell@gmail.com"},
]
dependencies = [
    "click",
    "loguru",
    "beautifulsoup4",
    "Pillow",
    "numpy",
    "vl-convert-python",
    "selenium",
    "cairosvg",
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
website_diff = "website_diff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["website_diff"]
